--- a/fundamentos/bloco-3-introdução-HTML-CSS/dia-4-HTMLsemantico/exercício1/style.css
+++ b/fundamentos/bloco-3-introdução-HTML-CSS/dia-4-HTMLsemantico/exercício1/style.css
@@ -1,7 +1,7 @@
 .textnVideo {
     display: inline-block;
 }
-article {
+section {
     width: 70%;
     background-color: red;
     border: 2px green solid;
