--- a/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula-5-CSS-Responsivo-mobile-first/exercício2/style.css
+++ b/fundamentos/bloco-6-HTML-e-CSS-Forms-Flexbox-Responsivo/aula-5-CSS-Responsivo-mobile-first/exercício2/style.css
@@ -37,6 +37,41 @@ aside{
     margin: 5%;
 }
 
-@media screen and (min-width: 400px){
+@media screen and (min-width: 400px) and (max-width: 1000px){
+    header p{
+        margin: 3% 0;
+        text-align: center;
+    }
+    .list1{
+        /* margin-left: 32%; */
+    }
+    .asides{
+        display: flex;
+    }
+    h3{
+        margin: 5px;
+    }
+    footer .text{
+        margin-top: 2%;
+    }
+}
 
+@media screen and (min-width: 1001px){
+    header p{
+        margin: 3% 0;
+        text-align: center;
+    }
+    .list1{
+        /* margin-left: 32%; */
+    }
+    .asides{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    h3{
+        margin: 5px;
+    }
+    footer .text{
+        margin-top: 2%;
+    }
 }
